# kubernetes-chatgpt-bot

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
chatgpt_robusta_actions/: chat_gpt.py
